--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
-    "puppeteer": "^24.4.0",
+    "pdf-lib": "^1.17.1",
     "sharp": "^0.33.5"
   }
 }
