--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "icojs": "^0.19.5",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "sharp": "^0.33.5"
